RESOLVED FIXED90167
[Qt] inspector/styles/inject-stylesheet.html makes 4 tests flakey (TEXT PASS)
https://bugs.webkit.org/show_bug.cgi?id=90167
Summary [Qt] inspector/styles/inject-stylesheet.html makes 4 tests flakey (TEXT PASS)
Csaba Osztrogonác
Reported 2012-06-28 06:02:20 PDT
inspector/styles/inject-stylesheet.html makes the following tests flakey (TEXT PASS): - inspector/styles/styles-iframe.html - inspector/styles/styles-source-lines.html - inspector/styles/media-queries.html - tables/mozilla/bugs/bug27038-3.html This test introduced in http://trac.webkit.org/changeset/120600 and fixed by http://trac.webkit.org/changeset/120708. You can easily reproduce this bug with the following command: - Tools/Script/run-webkit-tests inspector/styles/inject-stylesheet.html inspector/styles/styles-iframe.html inspector/styles/styles-source-lines.html inspector/styles/media-queries.html tables/mozilla/bugs/bug27038-3.html diffs: --- /home/webkitbuildbot/slaves/release32bit-qt5/buildslave/qt-linux-32-release-qt5/build/layout-test-results/inspector/styles/styles-iframe-expected.txt +++ /home/webkitbuildbot/slaves/release32bit-qt5/buildslave/qt-linux-32-release-qt5/build/layout-test-results/inspector/styles/styles-iframe-actual.txt @@ -11,6 +11,10 @@ media="screen" (styles-iframe.html) #main { (styles-iframe.html:5) background: blue; + +[expanded] +#main { (user stylesheet) +color: red; [expanded] div { (user agent stylesheet) @@ -28,6 +32,10 @@ background: green; [expanded] +#iframebody { (user stylesheet) +/-- overloaded --/ background: red; + +[expanded] body { (user agent stylesheet) display: block; margin: 8px; --- /home/webkitbuildbot/slaves/release32bit-qt5/buildslave/qt-linux-32-release-qt5/build/layout-test-results/inspector/styles/styles-source-lines-expected.txt +++ /home/webkitbuildbot/slaves/release32bit-qt5/buildslave/qt-linux-32-release-qt5/build/layout-test-results/inspector/styles/styles-source-lines-actual.txt @@ -28,6 +28,10 @@ content: "Before"; [expanded] +#main { (user stylesheet) +/-- overloaded --/ color: red; + +[expanded] div { (user agent stylesheet) display: block; --- /home/webkitbuildbot/slaves/release32bit-qt5/buildslave/qt-linux-32-release-qt5/build/layout-test-results/inspector/styles/media-queries-expected.txt +++ /home/webkitbuildbot/slaves/release32bit-qt5/buildslave/qt-linux-32-release-qt5/build/layout-test-results/inspector/styles/media-queries-actual.txt @@ -25,6 +25,10 @@ background: blue; [expanded] +#main { (user stylesheet) +/-- overloaded --/ color: red; + +[expanded] div { (user agent stylesheet) display: block; --- /home/webkitbuildbot/slaves/release32bit-qt5/buildslave/qt-linux-32-release-qt5/build/layout-test-results/tables/mozilla/bugs/bug27038-3-expected.txt +++ /home/webkitbuildbot/slaves/release32bit-qt5/buildslave/qt-linux-32-release-qt5/build/layout-test-results/tables/mozilla/bugs/bug27038-3-actual.txt @@ -6,14 +6,14 @@ RenderBlock {DIV} at (0,0) size 784x29 [bgcolor=#D0D0D0] RenderText {#text} at (315,0) size 154x29 text run at (315,0) width 154: "Font Size:6mm" - RenderTable {TABLE} at (0,29) size 784x143 [bgcolor=#008000] + RenderTable {TABLE} at (0,29) size 784x143 [color=#FF0000] [bgcolor=#008000] RenderTableSection {TBODY} at (0,0) size 784x143 RenderTableRow {TR} at (0,2) size 784x139 RenderTableCell {TD} at (2,2) size 389x139 [r=0 c=0 rs=1 cs=1] RenderBlock {DIV} at (1,1) size 387x29 [bgcolor=#D0D0D0] RenderText {#text} at (82,0) size 223x29 text run at (82,0) width 223: "Table height at 24mm" - RenderTable {TABLE} at (1,30) size 387x108 + RenderTable {TABLE} at (1,30) size 387x108 [color=#000000] RenderTableSection {THEAD} at (0,0) size 387x37 [bgcolor=#FF0000] RenderTableRow {TR} at (0,2) size 387x33 RenderTableCell {TD} at (2,2) size 383x33 [r=0 c=0 rs=1 cs=1] @@ -33,7 +33,7 @@ RenderBlock {DIV} at (1,1) size 387x29 [bgcolor=#D0D0D0] RenderText {#text} at (82,0) size 223x29 text run at (82,0) width 223: "Table height at 25mm" - RenderTable {TABLE} at (1,30) size 387x108 + RenderTable {TABLE} at (1,30) size 387x108 [color=#000000] RenderTableSection {THEAD} at (0,0) size 387x37 [bgcolor=#FF0000] RenderTableRow {TR} at (0,2) size 387x33 RenderTableCell {TD} at (2,2) size 383x33 [r=0 c=0 rs=1 cs=1]
Attachments
Patch (4.31 KB, patch)
2012-06-28 07:13 PDT, Alexander Pavlov (apavlov)
ossy: review+
ossy: commit-queue-
Csaba Osztrogonác
Comment 1 2012-06-28 06:22:20 PDT
I skipped it to make bots happier - http://trac.webkit.org/changeset/121427/trunk/LayoutTests/platform/qt/Skipped Please unskip it with the proper fix.
Alexander Pavlov (apavlov)
Comment 2 2012-06-28 07:13:45 PDT
Csaba Osztrogonác
Comment 3 2012-06-28 07:19:17 PDT
Comment on attachment 149948 [details] Patch LGTM, r=me. Please unskip the test when you lands the patch. Thanks for the quick fix. ;-)
Alexander Pavlov (apavlov)
Comment 4 2012-06-28 07:27:44 PDT
Note You need to log in before you can comment on or make changes to this bug.