[Qt] inspector/styles/inject-stylesheet.html makes 4 tests flakey (TEXT PASS) https://bugs.webkit.org/show_bug.cgi?id=90167

Reviewed by Csaba Osztrogonác.

Source/WebKit/qt:

* WebCoreSupport/DumpRenderTreeSupportQt.cpp:
(DumpRenderTreeSupportQt::removeUserStyleSheets):
* WebCoreSupport/DumpRenderTreeSupportQt.h:

Tools:

DRT should remove user stylesheets from the page group when resetting before running another test.

* DumpRenderTree/qt/DumpRenderTreeQt.cpp:
(WebCore::DumpRenderTree::resetToConsistentStateBeforeTesting):

LayoutTests:

Unskip the previously offensive test.

* platform/qt/Skipped:

Canonical link: https://commits.webkit.org/107997@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@121429 268f45cc-cd09-0410-ab3c-d52691b4dbfc